--- a/Vale Decem.vcxproj.filters
+++ b/Vale Decem.vcxproj.filters
@@ -85,5 +85,8 @@
     <None Include="shaders\gbuffer.vs.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\light.fs.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
