--- a/Vale Decem.vcxproj
+++ b/Vale Decem.vcxproj
@@ -107,6 +107,7 @@
     <None Include="shaders\blit.vs.glsl" />
     <None Include="shaders\gbuffer.fs.glsl" />
     <None Include="shaders\gbuffer.vs.glsl" />
+    <None Include="shaders\light.fs.glsl" />
     <None Include="shaders\simple.fs.glsl" />
     <None Include="shaders\simple.vs.glsl" />
   </ItemGroup>
