--- a/Vale Decem.vcxproj
+++ b/Vale Decem.vcxproj
@@ -94,12 +94,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Cube.h" />
+    <ClInclude Include="include\DirectionalLight.h" />
     <ClInclude Include="include\FreeFlyCamera.h" />
     <ClInclude Include="include\GBuffer.h" />
     <ClInclude Include="include\GLProgram.h" />
     <ClInclude Include="include\GLTexture.h" />
     <ClInclude Include="include\Plane.h" />
+    <ClInclude Include="include\PointLight.h" />
     <ClInclude Include="include\Project.h" />
+    <ClInclude Include="include\SpotLight.h" />
     <ClInclude Include="include\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +114,7 @@
     <None Include="shaders\pointLight.fs.glsl" />
     <None Include="shaders\simple.fs.glsl" />
     <None Include="shaders\simple.vs.glsl" />
+    <None Include="shaders\spotLight.fs.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
